--- a/css/style.css
+++ b/css/style.css
@@ -186,18 +186,36 @@ h6,
 /*** Hero Header ***/
 .hero-header {
     background:
-        url(../img/bg-dot.png),
-        url(../img/bg-dot.png),
-        url(../img/bg-round.png),
-        url(../img/bg-tree.png),
         url(../img/bg-bottom-hero.png);
     background-position:
-        10px 10px,
+        -25px 438px,
         bottom 190px right 10px,
         left 55% top -1px,
         left 45% bottom -1px,
         center bottom -1px;
     background-repeat: no-repeat;
+}
+
+.light-class{
+    width: 80px;
+    top:15%;
+    left:5%;
+    position: absolute;
+    animation: krish 5s ease infinite ;
+}
+
+@keyframes krish {
+    0%{
+
+        transform:scale(1.3);
+        opacity: .5;
+    }
+
+    100%{
+        transform:scale(1.7);
+        opacity:0;
+    }
+    
 }
 
 
