--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -35,6 +35,7 @@ body{
         color: white;
         padding:15px 15px;
        transition: .4s all;
+       position:fixed;
    }
    
    #check:checked ~ .navbar-side{
@@ -65,6 +66,8 @@ body{
     left:-250px;
     transition: .4s all;
     box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.483);
+    z-index:999;
+    top:0;
 }
 
 
@@ -92,6 +95,7 @@ body{
 }
 .user-profile h1{
     display: inline;
+    font-size: 38px;
 }
 
 
