--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -132,6 +132,10 @@ list-style: none;
     color:blue;
 }
 
+.service-part .coral{
+    color:coral;
+}
+
 .service-part .green{
     color:darkgreen;
 }
