--- a/userPanel/startupPanel/assets/css/loopple/loopple.css
+++ b/userPanel/startupPanel/assets/css/loopple/loopple.css
@@ -1,3 +1,12 @@
+/*****************Custom CSS**********************/
+.table{
+  background-color: white;
+}
+@media only screen and (max-width: 1100px) {
+  .table{
+    font-size: xx-small;
+  }
+}
 /* Loopple Alert */
 .loopple-alert {
   position: relative;
