--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -12,116 +12,84 @@ body{
    
 }
 
-.glowing {
+/* .cir-two{
+    width:200px;
+    height:200px;
+    background-color:rgb(81, 220, 255);
     position:absolute;
-    min-width:100%;
-    height: 400px;
-    top:0;
-    left:0;
-    /* margin: -150px; */
-    transform-origin: right;
-    animation: colorChange 8s linear infinite;
-     z-index:-1;
-  }
-  
-  .glowing:nth-child(even) {
-    transform-origin: left;
-  }
-  
-  @keyframes colorChange {
-    0% {
-      filter: hue-rotate(0deg);
-      transform: rotate(0deg);
+    top:-50px;
+    right:-50px;
+    border-radius:100%;
+    z-index:-1;
+}
+
+.cir-two::before{
+    width:300px;
+    height:300px;
+    background-color:rgb(81, 220, 255);
+    content:'';
+    position:absolute;
+    top:-50px;
+    right:-50px;
+    border-radius:100%;
+    animation: cirtwo 3s linear  infinite;
+}
+
+@keyframes cirtwo {
+    0%{
+        width:200px;
+        height:200px;
+
     }
-    100% {
-      filter: hue-rotate(360deg);
-      transform: rotate(360deg);
-    }
-  }
-  
-  .glowing span {
-    position: absolute;
-    top: calc(80px * var(--i));
-    left: calc(80px * var(--i));
-    bottom: calc(80px * var(--i));
-    right: calc(80px * var(--i));
-  }
-  
-  .glowing span::before {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: -8px;
-    width: 15px;
-    height: 15px;
-    background: #f00;
-    border-radius: 50%;
-  }
-  
-  .glowing span:nth-child(3n + 1)::before {
-    background: rgba(134,255,0,1);
-    box-shadow: 0 0 20px rgba(134,255,0,1),
-      0 0 40px rgba(134,255,0,1),
-      0 0 60px rgba(134,255,0,1),
-      0 0 80px rgba(134,255,0,1),
-      0 0 0 8px rgba(134,255,0,.1);
-  }
-  
-  .glowing span:nth-child(3n + 2)::before {
-    background: rgba(255,214,0,1);
-    box-shadow: 0 0 20px rgba(255,214,0,1),
-      0 0 40px rgba(255,214,0,1),
-      0 0 60px rgba(255,214,0,1),
-      0 0 80px rgba(255,214,0,1),
-      0 0 0 8px rgba(255,214,0,.1);
-  }
-  
-  .glowing span:nth-child(3n + 3)::before {
-    background: rgba(0,226,255,1);
-    box-shadow: 0 0 20px rgba(0,226,255,1),
-      0 0 40px rgba(0,226,255,1),
-      0 0 60px rgba(0,226,255,1),
-      0 0 80px rgba(0,226,255,1),
-      0 0 0 8px rgba(0,226,255,.1);
-  }
-  
-  .glowing span:nth-child(3n + 1) {
-    animation: animate 10s alternate infinite;
-  }
-  
-  .glowing span:nth-child(3n + 2) {
-    animation: animate-reverse 3s alternate infinite;
-  }
-  
-  .glowing span:nth-child(3n + 3) {
-    animation: animate 8s alternate infinite; 
-  }
-  
-  @keyframes animate {
-    0% {
-      transform: rotate(180deg);
-    }
-    50% {
-      transform: rotate(0deg);
-    }
-    100% {
-      transform: rotate(360deg);
-    }
-  }
-  
-  @keyframes animate-reverse {
-    0% {
-      transform: rotate(360deg);
+
+    100%{
+        width:350px;
+        height:350px;
+        opacity: 0;
     }
     
-    50% {
-      transform: rotate(180deg);
+}
+ */
+
+/*  */
+
+/* .cir-three{
+    width:200px;
+    height:200px;
+    background-color:rgb(81, 220, 255);
+    position:absolute;
+    right:-60px;
+    bottom:-70px;
+    border-radius:100%;
+    z-index:-1;
+}
+
+.cir-three::before{
+    width:300px;
+    height:300px;
+    background-color:rgb(81, 220, 255);
+    content:'';
+    position:absolute;
+    right:-50px;
+    bottom:-50px;
+    border-radius:100%;
+    animation: cirthree 3s linear  infinite;
+}
+
+@keyframes cirthree {
+    0%{
+        width:200px;
+        height:200px;
+
+    }
+
+    100%{
+        width:350px;
+        height:350px;
+        opacity: 0;
     }
     
-    100% {
-      transform: rotate(0deg);
-    }
-  }
+} */
 
 /* toggel area start here  */
 #check{
